# whereisthisplace

./: .dockerignore  .env.example  .gitignore  API_TESTING_README.md  BENCHMARK.md  Dockerfile.postgis-vector  FEATURE_BRANCH_README.md  LICENSE  Makefile  README.md  TESTING.md  alembic.ini  backup_working_state.sh  comprehensive_api_test.sh  docker-compose.cpu.yml  docker-compose.gpu-final.yml  docker-compose.gpu.yml  docker-compose.yml  manual_test_api.py  simple_test.sh  test_api_curl.sh  test_api_openai_integration.sh  test_bias_detection.sh  test_openai_fallback.sh  test_openai_flow.py  test_openai_key.py  test_openai_key_curl.sh  test_whereuser_db.py
.github/workflows/: benchmark.yml  pages.yml  push-ecr.yml
api/: .env  README.md  alembic.ini  config.py  db.py  generate_openapi.py  main.py  pyproject.toml  run_prediction_tests.py  test_db_insertion.py  test_definition_of_done.py
api/api/: __init__.py  main.py
api/api/core/: config.py
api/api/middleware/: __init__.py  ephemeral.py
api/api/models/: photo.py  schemas.py
api/api/routes/: predict.py
api/docker/: Dockerfile.cpu  Dockerfile.gpu  Dockerfile.test-db  start.sh  start.sh_backup
api/middleware/: ratelimit.py
api/migrations/: env.py
api/migrations/versions/: 202405_add_photos_table.py  202406_add_prediction_columns.py  202406_photos_table_from_sqla_model.py
api/repositories/: match.py  photos.py
api/routes/: predict.py
api/tests/: test_api.py  test_ephemeral_middleware.py  test_ml_stubs.py  test_rate_limit_middleware.py
app/: README_IAP.md  pubspec.yaml
app/android/: gradle.properties
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/res/xml/: network_security_config.xml
app/android/fastlane/: Appfile
app/ios/: ExportOptions.plist  Podfile
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/l10n/: intl_de.arb  intl_en.arb
app/lib/: main.dart
app/lib/l10n/: app_localizations.dart
app/lib/models/: engine.dart  result_model.dart
app/lib/providers/: geo_provider.dart  locale_provider.dart  pro_provider.dart  settings_provider.dart
app/lib/screens/: home.dart  home_screen.dart  paywall_screen.dart  result.dart  settings.dart
app/lib/services/: api.dart  iap_service.dart
app/lib/widgets/: map_widget.dart
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/test/: geo_provider_test.dart  iap_service_test.dart  locale_provider_test.dart  settings_provider_test.dart  widget_test.dart
asyncpg/: __init__.py
config/: config.properties
datasets/mapillary_cairo/: bbox_info.json  mapillary_dataset.csv
datasets/mapillary_paris/: bbox_info.json  mapillary_dataset.csv
datasets/mapillary_paris_batch2/: bbox_info.json  mapillary_dataset.csv
datasets/mapillary_paris_batch3/: bbox_info.json  mapillary_dataset.csv
datasets/mapillary_rio/: bbox_info.json  mapillary_dataset.csv
datasets/mapillary_tokyo_inner/: bbox_info.json  mapillary_dataset.csv
docs/: api_openapi.yaml  privacy-policy.md
dotenv/: __init__.py
e2e/: api_test.py  package-lock.json  package.json
fastapi/: __init__.py  testclient.py
fastapi/middleware/: __init__.py
ml/: fuse.py  retrieval.py  scene_classifier.py
multipart/: __init__.py  multipart.py
numpy/: __init__.py
pgvector/: __init__.py  asyncpg.py  sqlalchemy.py
psycopg2/: __init__.py
pydantic_settings/: __init__.py
requests/: __init__.py
scripts/: benchmark.py  bulk_loader_production.py  check_training_distribution.py  create-user.sql  debug_openai.py  force_openai_test.py  init-db-with-pgvector.sql  init-db.backup.sql  init-db.sql  load_dataset.py  load_sample_data.py  mapillary_downloader.py  run_api.sh  run_benchmark_manual.sh  test_api_endpoint.py  test_openai_default.py  test_openai_forced.py
starlette/: requests.py
starlette/middleware/: base.py
starlette/responses/: __init__.py
tests/: test_app_endpoints.py  test_bias_guard.py  test_db_pool.py  test_eiffel_detailed.py  test_load_dataset.py  test_match.py  test_openai_mode.py  test_prediction_logging.py
