[tool.poetry]
name        = "whereisthisplace-api"
version     = "0.1.0"
description = "API for the WhereIsThisPlace project"
authors     = ["Felix Grüner <you@example.com>"]
readme      = "README.md"

# package the code in api/api/…
packages    = [{ include = "api", from = "." }]

[tool.poetry.dependencies]
python            = "^3.9"
fastapi           = ">=0.115.12,<0.116.0"
uvicorn           = { version = ">=0.34.2,<0.35.0", extras = ["standard"] }
httpx             = ">=0.28.1,<0.29.0"
python-dotenv     = ">=1.1.0,<2.0.0"
pydantic-settings = "^2.2"
alembic           = "^1.13"
python-multipart  = "^0.0.5"
asyncpg           = "^0.29.0"
psycopg2-binary   = "^2.9.9"
sqlalchemy        = ">=2.0"
geoalchemy2       = ">=0.14"
pgvector          = { version = "~0.2", extras = ["sqlalchemy"] }
requests          = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest  = "^8.3.5"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
